fix settings and code to use v2 golanglint-ci
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,23 +1,13 @@
+version: "2"
 run:
-  deadline: 5m
   allow-parallel-runners: true
-
-issues:
-  # don't skip warning about doc comments
-  # don't exclude the default set of lint
-  exclude-use-default: false
-  # restore some of the defaults
-  # (fill in the rest as needed)
-  exclude-rules:
-    - path: "api/*"
-      linters:
-        - lll
-    - path: "internal/*"
-      linters:
-        - dupl
-        - lll
 linters:
-  disable-all: true
+  settings:
+    staticcheck:
+      dot-import-whitelist: # allow dot imports for the following packages
+        - github.com/onsi/gomega
+        - github.com/onsi/ginkgo/v2
+  default: none
   enable:
     - copyloopvar
     - dupl
@@ -25,9 +15,6 @@ linters:
     - errorlint
     - goconst
     - gocyclo
-    - gofmt
-    - goimports
-    - gosimple
     - govet
     - ineffassign
     - lll
@@ -35,7 +22,19 @@ linters:
     - nakedret
     - prealloc
     - staticcheck
-    - typecheck
     - unconvert
     - unparam
     - unused
+  exclusions:
+    rules:
+      - linters:
+          - lll
+        path: api/*
+      - linters:
+          - dupl
+          - lll
+        path: internal/*
+formatters:
+  enable:
+    - gofmt
+    - goimports
