add parameter for nodePort
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>
Co-authored-by: Shinya Hayashi <shinya-hayashi@cybozu.co.jp>
Co-authored-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/charts/mantle/templates/service.yaml
+++ b/charts/mantle/templates/service.yaml
@@ -11,6 +11,9 @@ spec:
     targetPort: {{ .Values.replicationService.targetPort }}
     protocol: TCP
     name: replication
+    {{- with .Values.replicationService.nodePort }}
+    nodePort: {{ . }}
+    {{- end }}
   selector:
     {{- include "mantle.selectorLabels" . | nindent 4 }}
 {{- if .Values.webhook.enabled }}
