--- a/charts/mantle/templates/service.yaml
+++ b/charts/mantle/templates/service.yaml
@@ -2,15 +2,31 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "mantle.fullname" . }}
+  name: {{ include "mantle.fullname" . }}-replication
   namespace: {{ .Release.Namespace }}
 spec:
-  type: {{ .Values.secondaryService.type }}
+  type: {{ .Values.replicationService.type }}
   ports:
-  - port: {{ .Values.secondaryService.port }}
-    targetPort: {{ .Values.secondaryService.targetPort }}
+  - port: {{ .Values.replicationService.port }}
+    targetPort: {{ .Values.replicationService.targetPort }}
     protocol: TCP
-    name: grpc
+    name: replication
   selector:
     {{- include "mantle.selectorLabels" . | nindent 4 }}
+{{- if .Values.webhook.enabled }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "mantle.fullname" . }}-webhook
+  namespace: {{ .Release.Namespace }}
+spec:
+  ports:
+  - port: {{ .Values.webhook.service.port }}
+    targetPort: {{ .Values.webhook.service.targetPort }}
+    protocol: TCP
+    name: webhook
+  selector:
+    {{- include "mantle.selectorLabels" . | nindent 4 }}
+{{ end }}
 {{ end }}
