add e2e test for webhook
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>
Co-authored-by: Shinya Hayashi <shinya-hayashi@cybozu.co.jp>
Co-authored-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/test/e2e/singlek8s/testdata/pod-mount-volume-template.yaml
+++ b/test/e2e/singlek8s/testdata/pod-mount-volume-template.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: %s
-  namespace: %s
+  name: "%s"
+  namespace: "%s"
 spec:
   containers:
     - name: ubuntu
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: my-volume
       persistentVolumeClaim:
-        claimName: %s
+        claimName: "%s"
