--- a/test/e2e/testdata/values-mantle-primary-template.yaml
+++ b/test/e2e/testdata/values-mantle-primary-template.yaml
@@ -18,18 +18,15 @@ controller:
     - name: REQUEUE_RECONCILIATION_AFTER
       value: "1s"
   backupTransferPartSize: {BACKUP_TRANSFER_PART_SIZE}
-  grpcTLSClientCertPath: "/mnt/grpc-tls-client-cert/tls.crt"
-  grpcTLSClientKeyPath: "/mnt/grpc-tls-client-cert/tls.key"
-  grpcTLSServerCAPath: "/mnt/grpc-tls-server-cert/ca.crt"
   volumeMounts:
-    - name: grpc-tls-server-cert
-      mountPath: /mnt/grpc-tls-server-cert
-    - name: grpc-tls-client-cert
-      mountPath: /mnt/grpc-tls-client-cert
+    - name: replication-tls-server-cert
+      mountPath: /mnt/replication-tls-server-cert
+    - name: replication-tls-client-cert
+      mountPath: /mnt/replication-tls-client-cert
   volumes:
-    - name: grpc-tls-server-cert
+    - name: replication-tls-server-cert
       configMap:
         name: mantle-secondary-ca-crt
-    - name: grpc-tls-client-cert
+    - name: replication-tls-client-cert
       secret:
-        secretName: cert-mantle
+        secretName: cert-mantle-replication
