test/e2e/multik8s/replication: separate suite_test.go into 3 files
This commit separates the tests in the test/e2e/multik8s/replication/suite_test.go
into 3 different files, i.e., full_backup_test.go, incr_backup_test.go,
and misc_test.go. The tests in each file has each different label
("full-backup", "incr-backup", or "misc"), and these labels are
used to parallelize the tests in the CI.

There should be no functional changes in this commit.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -23,7 +23,6 @@ jobs:
       fail-fast: false
       matrix:
         package:
-          - replication
           - replicationfailure
           - changetostandalone
           - changetoprimary
@@ -39,6 +38,15 @@ jobs:
           - package: replication
             backup-transfer-part-size: 200Gi # greater than the PVC size
             ginkgo-flags: --label-filter="various-transfer-part-size"
+          - package: replication
+            backup-transfer-part-size: 3Mi # smaller than the PVC size
+            ginkgo-flags: --label-filter="full-backup"
+          - package: replication
+            backup-transfer-part-size: 3Mi # smaller than the PVC size
+            ginkgo-flags: --label-filter="incr-backup"
+          - package: replication
+            backup-transfer-part-size: 3Mi # smaller than the PVC size
+            ginkgo-flags: --label-filter="misc"
     #runs-on: "ubuntu-22.04"
     runs-on: mantle_large_runner_16core
     timeout-minutes: 120
