test/e2e/multik8s: move tests in changetostandalone to replication package
The changetostandalone package was made to parallelize the e2e tests.
However, we can use labels for this purpose. This commit moves the tests
in the changetostandalone package to replication package. Instead, it
attaches "change-to-standalone" label to the tests so that they can run in
parallel.

There should be no functional changes in this commit.

Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -22,8 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package:
-          - changetostandalone
+        package: []
         backup-transfer-part-size:
           - 3Mi # smaller than the PVC size
         ginkgo-flags:
@@ -53,6 +52,9 @@ jobs:
           - package: replication
             backup-transfer-part-size: 3Mi # smaller than the PVC size
             ginkgo-flags: --label-filter="change-to-secondary"
+          - package: replication
+            backup-transfer-part-size: 3Mi # smaller than the PVC size
+            ginkgo-flags: --label-filter="change-to-standalone"
     #runs-on: "ubuntu-22.04"
     runs-on: mantle_large_runner_16core
     timeout-minutes: 120
