--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -22,39 +22,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        package: []
         backup-transfer-part-size:
           - 3Mi # smaller than the PVC size
-        ginkgo-flags:
-          - ""
+        label-filter:
+          - full-backup
+          - incr-backup
+          - misc
+          - backup-failure
+          - change-to-primary
+          - change-to-secondary
+          - change-to-standalone
         include:
-          - package: replication
-            backup-transfer-part-size: 10Mi # equal to the PVC size
-            ginkgo-flags: --label-filter="various-transfer-part-size"
-          - package: replication
-            backup-transfer-part-size: 200Gi # greater than the PVC size
-            ginkgo-flags: --label-filter="various-transfer-part-size"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="full-backup"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="incr-backup"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="misc"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="backup-failure"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="change-to-primary"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="change-to-secondary"
-          - package: replication
-            backup-transfer-part-size: 3Mi # smaller than the PVC size
-            ginkgo-flags: --label-filter="change-to-standalone"
+          - backup-transfer-part-size: 10Mi # equal to the PVC size
+            label-filter: various-transfer-part-size
+          - backup-transfer-part-size: 200Gi # greater than the PVC size
+            label-filter: various-transfer-part-size
     #runs-on: "ubuntu-22.04"
     runs-on: mantle_large_runner_16core
     timeout-minutes: 120
@@ -68,6 +50,5 @@ jobs:
       - run: make -C test/e2e setup
       - run: |
           make -C test/e2e test-multiple-k8s-clusters \
-            TEST_MULTIK8S_PACKAGES=${{ matrix.package }} \
             BACKUP_TRANSFER_PART_SIZE=${{ matrix.backup-transfer-part-size }} \
-            GINKGO_FLAGS=${{ matrix.ginkgo-flags }}
+            GINKGO_FLAGS=--label-filter='${{ matrix.label-filter }}'
