ci: test/e2e/multik8s: run unlabelled tests
Signed-off-by: Ryotaro Banno <ryotaro.banno@gmail.com>

--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -27,11 +27,11 @@ jobs:
         label-filter:
           - full-backup
           - incr-backup
-          - misc
           - backup-failure
           - change-to-primary
           - change-to-secondary
           - change-to-standalone
+          - "!//" # select unlabelled tests
         include:
           - backup-transfer-part-size: 10Mi # equal to the PVC size
             label-filter: various-transfer-part-size
