configure `cert-manager.io/inject-ca-from` annotation for webhook
Signed-off-by: Kyori Sakao <sakaok@cybozu.co.jp>
Co-authored-by: Shinya Hayashi <shinya-hayashi@cybozu.co.jp>
Co-authored-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/charts/mantle/templates/webhook.yaml
+++ b/charts/mantle/templates/webhook.yaml
@@ -5,6 +5,10 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
+  {{- if eq .Values.webhook.certificate.managedBy "cert-manager" }}
+  annotations:
+    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "mantle.fullname" . }}-webhook
+  {{- end }}
   name: {{ include "mantle.fullname" . }}-validating-webhook-configuration
 webhooks:
 - admissionReviewVersions:
