Disable lint for Result.Requeue deprecation
We currently do not have a clear solution to avoid using it, and
resolving this issue is beyond the scope of supporting the new
Kubernetes.

Signed-off-by: Toshikuni Fukaya <toshikuni-fukaya@cybozu.co.jp>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,6 +34,12 @@ linters:
           - dupl
           - lll
         path: internal/*
+
+      # exclude staticcheck SA1019 for Result.Requeue.
+      - linters:
+          - staticcheck
+        text: "SA1019: .*\\.Requeue is deprecated: Use `RequeueAfter` instead."
+
 formatters:
   enable:
     - gofmt
