make MantleBackup spec.pvc available for field selector
Signed-off-by: Yuma Ogami <yuma-ogami@cybozu.co.jp>

--- a/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
+++ b/charts/mantle-cluster-wide/templates/mantle.cybozu.io_mantlebackups.yaml
@@ -148,6 +148,8 @@ spec:
                 x-kubernetes-int-or-string: true
             type: object
         type: object
+    selectableFields:
+    - jsonPath: .spec.pvc
     served: true
     storage: true
     subresources:
