Add NOTICE to clarify the copyright holder
Signed-off-by: Satoru Takeuchi <satoru.takeuchi@gmail.com>

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -4,10 +4,14 @@ on:
     paths-ignore:
       - "**/*.md"
       - "CODEOWNERS"
+      - "LICENSE"
+      - "NOTICE"
   push:
     paths-ignore:
       - "**/*.md"
       - "CODEOWNERS"
+      - "LICENSE"
+      - "NOTICE"
     branches:
       - "main"
 
