--- a/.github/workflows/e2e-multiple-k8s-clusters.yaml
+++ b/.github/workflows/e2e-multiple-k8s-clusters.yaml
@@ -31,6 +31,7 @@ jobs:
           - change-to-primary
           - change-to-secondary
           - change-to-standalone
+          - lock
           - "!//" # select unlabelled tests
         include:
           - backup-transfer-part-size: 10Mi # equal to the PVC size
