update requeue parameter
`ctrl.Result{Requeue: true}` is influenced by backing off. We want
to avoid it.

Signed-off-by: Yuji Ito <llamerada.jp@gmail.com>

--- a/test/e2e/testdata/values-mantle-secondary-template.yaml
+++ b/test/e2e/testdata/values-mantle-secondary-template.yaml
@@ -13,8 +13,8 @@ controller:
   envSecret: export-data
   gcInterval: 1s
   env:
-    - name: REQUEUE_RECONCILIATION_IMMEDIATELY
-      value: "1"
+    - name: REQUEUE_RECONCILIATION_AFTER
+      value: "10s"
   mtls:
     clientCACertConfigMap: mantle-primary-ca-crt
     serverTLSSecret: cert-mantle-replication
