test: e2e: singlek8s: set REQUEUE_RECONCILIATION_AFTER to 10s
After the commit 9114318581921bdd7ae27bb2553aeba9f772a443, we need to
set the REQUEUE_RECONCILIATION_AFTER environment variable in any case.
However, we don't set it currently in the singlek8s e2e test.

This commit resolves the problem above by setting
REQUEUE_RECONCILIATION_AFTER to 10s in the values files for singlek8s.

--- a/test/e2e/testdata/values-mantle1.yaml
+++ b/test/e2e/testdata/values-mantle1.yaml
@@ -6,3 +6,6 @@ image:
 controller:
   overwriteMBCSchedule: "* * * * *"
   gcInterval: 1s
+  env:
+    - name: REQUEUE_RECONCILIATION_AFTER
+      value: "10s"
