--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -17,6 +17,18 @@ on:
 
 jobs:
   build:
+    strategy:
+      fail-fast: false
+      matrix:
+        loop:
+          - 0
+          - 1
+          - 2
+          - 3
+          - 4
+          - 5
+          - 6
+          - 7
     runs-on: mantle_large_runner_16core
     #runs-on: "ubuntu-22.04"
     timeout-minutes: 60
@@ -27,5 +39,6 @@ jobs:
           go-version-file: "go.mod"
       - run: sudo apt-get update
       - uses: ./.github/actions/set-up-kvm-for-e2e-tests
+      - run: echo "Loop ${{ matrix.loop }}"
       - run: make -C test/e2e setup
       - run: make -C test/e2e test
