--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
 # More info: https://docs.docker.com/engine/reference/builder/#dockerignore-file
 # Ignore build and test binaries.
 bin/
+
+# A workaround for "checking context: no permission to read from
+# '/home/user/mantle/test/e2e/bin/.minikube/machines/profile2/boot2docker.iso'" error.
+test/e2e/bin
